[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"
author = ["Ethan <yiliu0538@gmail.com>"]
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
dashmap = "6.1.0"
oneshot = "0.1.8"
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
